# SpaceView

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  changelog.md  tasks.md  todo.md
docs/: index.html
src/: app.rs  camera.rs  main.rs  scanner.rs  treemap.rs  world_layout.rs
